// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrefPopulationLineChart Snapshot: pref:北海道, populationType:年少人口の場合 1`] = `
<svg
  aria-label="年次(横軸)と各都道府県の総人口(縦軸)の関係"
  class="highcharts-root"
  height="400"
  role="img"
  style="font-family: Helvetica, Arial, sans-serif; font-size: 1rem;"
  version="1.1"
  viewBox="0 0 600 400"
  width="600"
  xmlns="http://www.w3.org/2000/svg"
>
  <desc>
    Created with Highcharts 11.4.6
  </desc>
  <defs>
    <filter
      id="highcharts-drop-shadow-3"
    >
      <fedropshadow
        dx="1"
        dy="1"
        flood-color="#000000"
        flood-opacity="0.75"
        stdDeviation="2.5"
      />
    </filter>
    <clippath
      id="highcharts-65-"
    >
      <rect
        fill="none"
        height="NaNNaN"
        width="NaNNaN"
        x="0"
        y="0"
      />
    </clippath>
    <clippath
      id="highcharts-66-"
    >
      <rect
        class="highcharts-animating"
        fill="none"
        height="NaN"
        width="NaN"
        x="0"
        y="0"
      />
    </clippath>
    <clippath
      id="highcharts-67-"
    >
      <rect
        fill="none"
        height="NaN"
        width="99"
        x="-99"
        y="-99"
      />
    </clippath>
  </defs>
  <rect
    class="highcharts-background"
    fill="#ffffff"
    filter="none"
    height="400"
    rx="0"
    ry="0"
    width="600"
    x="0"
    y="0"
  />
  <rect
    class="highcharts-plot-background"
    fill="none"
    filter="none"
    height="NaNNaN"
    width="NaNNaN"
    x="NaNNaN"
    y="10"
  />
  <rect
    class="highcharts-plot-border"
    data-z-index="1"
    fill="none"
    height="0"
    stroke="#cccccc"
    stroke-width="0"
    width="0"
    x="0"
    y="10"
  />
  <g
    class="highcharts-grid highcharts-xaxis-grid"
    data-z-index="1"
  />
  <g
    class="highcharts-grid highcharts-yaxis-grid"
    data-z-index="1"
  />
  <g
    class="highcharts-axis highcharts-xaxis"
    data-z-index="2"
  >
    <text
      class="highcharts-axis-title"
      data-z-index="7"
      style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
      text-anchor="middle"
      transform="translate(0,0)"
      x="NaN"
      y="NaN"
    >
      年次
    </text>
    <path
      class="highcharts-axis-line"
      d="M 0 0"
      data-z-index="7"
      fill="none"
      stroke="#333333"
      stroke-width="1"
    />
  </g>
  <g
    class="highcharts-axis highcharts-yaxis"
    data-z-index="2"
  >
    <text
      class="highcharts-axis-title"
      data-z-index="7"
      style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
      text-anchor="middle"
      transform="translate(0,0) rotate(270 NaN NaN)"
      x="NaN"
      y="NaN"
    >
      人口数
    </text>
    <path
      class="highcharts-axis-line"
      d="M 0 0"
      data-z-index="7"
      fill="none"
      stroke="#333333"
      stroke-width="0"
    />
  </g>
  <g
    class="highcharts-series-group"
    data-z-index="3"
    filter="none"
  >
    <g
      class="highcharts-series highcharts-series-0 highcharts-line-series"
      clip-path="url(#highcharts-66-)"
      data-z-index="0.1"
      opacity="1"
      transform="translate(NaN,10) scale(1 1)"
    />
    <g
      class="highcharts-markers highcharts-series-0 highcharts-line-series"
      clip-path="url(#highcharts-67-)"
      data-z-index="0.1"
      opacity="1"
      transform="translate(NaN,10) scale(1 1)"
    />
  </g>
  <text
    class="highcharts-subtitle"
    data-z-index="4"
    style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
    text-anchor="middle"
    x="300"
    y="10"
  />
  <text
    class="highcharts-caption"
    data-z-index="4"
    style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
    text-anchor="start"
    x="10"
    y="387"
  />
  <text
    class="highcharts-title"
    data-z-index="4"
    style="font-size: 1.2em; color: rgb(51, 51, 51); font-weight: bold; fill: #333333;"
    text-anchor="start"
    x="10"
    y="10"
  >
    年次(横軸)と各都道府県の年少人口(縦軸)の関係
  </text>
  <g
    class="highcharts-legend highcharts-no-tooltip"
    data-z-index="7"
    transform="translate(590,189)"
  >
    <rect
      class="highcharts-legend-box"
      fill="none"
      filter="none"
      rx="0"
      ry="0"
      stroke="#999999"
      stroke-width="0"
    />
    <g
      data-z-index="1"
    >
      <g>
        <g
          class="highcharts-legend-item highcharts-line-series highcharts-color-undefined highcharts-series-0"
          data-z-index="1"
          transform="translate(8,3)"
        >
          <path
            class="highcharts-graph"
            d="M 0 5 L 16 5"
            fill="none"
            stroke="#03af7a"
            stroke-dasharray="16,6"
            stroke-width="2"
          />
          <path
            class="highcharts-point"
            d="M 8 5 L 8 5 L 8 5 L 8 5 Z"
            fill="#03af7a"
            opacity="1"
            stroke="#ffffff"
            stroke-width="0"
          />
          <text
            data-z-index="2"
            style="color: rgb(51, 51, 51); cursor: pointer; font-size: 0.8em; text-decoration: none; fill: #333333;"
            text-anchor="start"
            x="21"
            y="5"
          >
            北海道
          </text>
        </g>
      </g>
    </g>
  </g>
  <g
    class="highcharts-axis-labels highcharts-xaxis-labels"
    data-z-index="7"
  />
  <g
    class="highcharts-axis-labels highcharts-yaxis-labels"
    data-z-index="7"
  />
  <text
    class="highcharts-credits"
    data-z-index="8"
    style="cursor: pointer; color: rgb(153, 153, 153); font-size: 0.6em; fill: #999999;"
    text-anchor="end"
    x="590"
    y="395"
  >
    Highcharts.com
  </text>
</svg>
`;

exports[`PrefPopulationLineChart Snapshot: pref:北海道, populationType:生産年齢人口の場合 1`] = `
<svg
  aria-label="年次(横軸)と各都道府県の総人口(縦軸)の関係"
  class="highcharts-root"
  height="400"
  role="img"
  style="font-family: Helvetica, Arial, sans-serif; font-size: 1rem;"
  version="1.1"
  viewBox="0 0 600 400"
  width="600"
  xmlns="http://www.w3.org/2000/svg"
>
  <desc>
    Created with Highcharts 11.4.6
  </desc>
  <defs>
    <filter
      id="highcharts-drop-shadow-4"
    >
      <fedropshadow
        dx="1"
        dy="1"
        flood-color="#000000"
        flood-opacity="0.75"
        stdDeviation="2.5"
      />
    </filter>
    <clippath
      id="highcharts-84-"
    >
      <rect
        fill="none"
        height="NaNNaN"
        width="NaNNaN"
        x="0"
        y="0"
      />
    </clippath>
    <clippath
      id="highcharts-85-"
    >
      <rect
        class="highcharts-animating"
        fill="none"
        height="NaN"
        width="NaN"
        x="0"
        y="0"
      />
    </clippath>
    <clippath
      id="highcharts-86-"
    >
      <rect
        fill="none"
        height="NaN"
        width="99"
        x="-99"
        y="-99"
      />
    </clippath>
  </defs>
  <rect
    class="highcharts-background"
    fill="#ffffff"
    filter="none"
    height="400"
    rx="0"
    ry="0"
    width="600"
    x="0"
    y="0"
  />
  <rect
    class="highcharts-plot-background"
    fill="none"
    filter="none"
    height="NaNNaN"
    width="NaNNaN"
    x="NaNNaN"
    y="10"
  />
  <rect
    class="highcharts-plot-border"
    data-z-index="1"
    fill="none"
    height="0"
    stroke="#cccccc"
    stroke-width="0"
    width="0"
    x="0"
    y="10"
  />
  <g
    class="highcharts-grid highcharts-xaxis-grid"
    data-z-index="1"
  />
  <g
    class="highcharts-grid highcharts-yaxis-grid"
    data-z-index="1"
  />
  <g
    class="highcharts-axis highcharts-xaxis"
    data-z-index="2"
  >
    <text
      class="highcharts-axis-title"
      data-z-index="7"
      style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
      text-anchor="middle"
      transform="translate(0,0)"
      x="NaN"
      y="NaN"
    >
      年次
    </text>
    <path
      class="highcharts-axis-line"
      d="M 0 0"
      data-z-index="7"
      fill="none"
      stroke="#333333"
      stroke-width="1"
    />
  </g>
  <g
    class="highcharts-axis highcharts-yaxis"
    data-z-index="2"
  >
    <text
      class="highcharts-axis-title"
      data-z-index="7"
      style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
      text-anchor="middle"
      transform="translate(0,0) rotate(270 NaN NaN)"
      x="NaN"
      y="NaN"
    >
      人口数
    </text>
    <path
      class="highcharts-axis-line"
      d="M 0 0"
      data-z-index="7"
      fill="none"
      stroke="#333333"
      stroke-width="0"
    />
  </g>
  <g
    class="highcharts-series-group"
    data-z-index="3"
    filter="none"
  >
    <g
      class="highcharts-series highcharts-series-0 highcharts-line-series"
      clip-path="url(#highcharts-85-)"
      data-z-index="0.1"
      opacity="1"
      transform="translate(NaN,10) scale(1 1)"
    />
    <g
      class="highcharts-markers highcharts-series-0 highcharts-line-series"
      clip-path="url(#highcharts-86-)"
      data-z-index="0.1"
      opacity="1"
      transform="translate(NaN,10) scale(1 1)"
    />
  </g>
  <text
    class="highcharts-subtitle"
    data-z-index="4"
    style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
    text-anchor="middle"
    x="300"
    y="10"
  />
  <text
    class="highcharts-caption"
    data-z-index="4"
    style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
    text-anchor="start"
    x="10"
    y="387"
  />
  <text
    class="highcharts-title"
    data-z-index="4"
    style="font-size: 1.2em; color: rgb(51, 51, 51); font-weight: bold; fill: #333333;"
    text-anchor="start"
    x="10"
    y="10"
  >
    年次(横軸)と各都道府県の生産年齢人口(縦軸)の関係
  </text>
  <g
    class="highcharts-legend highcharts-no-tooltip"
    data-z-index="7"
    transform="translate(590,189)"
  >
    <rect
      class="highcharts-legend-box"
      fill="none"
      filter="none"
      rx="0"
      ry="0"
      stroke="#999999"
      stroke-width="0"
    />
    <g
      data-z-index="1"
    >
      <g>
        <g
          class="highcharts-legend-item highcharts-line-series highcharts-color-undefined highcharts-series-0"
          data-z-index="1"
          transform="translate(8,3)"
        >
          <path
            class="highcharts-graph"
            d="M 0 5 L 16 5"
            fill="none"
            stroke="#03af7a"
            stroke-dasharray="16,6"
            stroke-width="2"
          />
          <path
            class="highcharts-point"
            d="M 8 5 L 8 5 L 8 5 L 8 5 Z"
            fill="#03af7a"
            opacity="1"
            stroke="#ffffff"
            stroke-width="0"
          />
          <text
            data-z-index="2"
            style="color: rgb(51, 51, 51); cursor: pointer; font-size: 0.8em; text-decoration: none; fill: #333333;"
            text-anchor="start"
            x="21"
            y="5"
          >
            北海道
          </text>
        </g>
      </g>
    </g>
  </g>
  <g
    class="highcharts-axis-labels highcharts-xaxis-labels"
    data-z-index="7"
  />
  <g
    class="highcharts-axis-labels highcharts-yaxis-labels"
    data-z-index="7"
  />
  <text
    class="highcharts-credits"
    data-z-index="8"
    style="cursor: pointer; color: rgb(153, 153, 153); font-size: 0.6em; fill: #999999;"
    text-anchor="end"
    x="590"
    y="395"
  >
    Highcharts.com
  </text>
</svg>
`;

exports[`PrefPopulationLineChart Snapshot: pref:北海道, populationType:老年人口の場合 1`] = `
<svg
  aria-label="年次(横軸)と各都道府県の総人口(縦軸)の関係"
  class="highcharts-root"
  height="400"
  role="img"
  style="font-family: Helvetica, Arial, sans-serif; font-size: 1rem;"
  version="1.1"
  viewBox="0 0 600 400"
  width="600"
  xmlns="http://www.w3.org/2000/svg"
>
  <desc>
    Created with Highcharts 11.4.6
  </desc>
  <defs>
    <filter
      id="highcharts-drop-shadow-5"
    >
      <fedropshadow
        dx="1"
        dy="1"
        flood-color="#000000"
        flood-opacity="0.75"
        stdDeviation="2.5"
      />
    </filter>
    <clippath
      id="highcharts-103-"
    >
      <rect
        fill="none"
        height="NaNNaN"
        width="NaNNaN"
        x="0"
        y="0"
      />
    </clippath>
    <clippath
      id="highcharts-104-"
    >
      <rect
        class="highcharts-animating"
        fill="none"
        height="NaN"
        width="NaN"
        x="0"
        y="0"
      />
    </clippath>
    <clippath
      id="highcharts-105-"
    >
      <rect
        fill="none"
        height="NaN"
        width="99"
        x="-99"
        y="-99"
      />
    </clippath>
  </defs>
  <rect
    class="highcharts-background"
    fill="#ffffff"
    filter="none"
    height="400"
    rx="0"
    ry="0"
    width="600"
    x="0"
    y="0"
  />
  <rect
    class="highcharts-plot-background"
    fill="none"
    filter="none"
    height="NaNNaN"
    width="NaNNaN"
    x="NaNNaN"
    y="10"
  />
  <rect
    class="highcharts-plot-border"
    data-z-index="1"
    fill="none"
    height="0"
    stroke="#cccccc"
    stroke-width="0"
    width="0"
    x="0"
    y="10"
  />
  <g
    class="highcharts-grid highcharts-xaxis-grid"
    data-z-index="1"
  />
  <g
    class="highcharts-grid highcharts-yaxis-grid"
    data-z-index="1"
  />
  <g
    class="highcharts-axis highcharts-xaxis"
    data-z-index="2"
  >
    <text
      class="highcharts-axis-title"
      data-z-index="7"
      style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
      text-anchor="middle"
      transform="translate(0,0)"
      x="NaN"
      y="NaN"
    >
      年次
    </text>
    <path
      class="highcharts-axis-line"
      d="M 0 0"
      data-z-index="7"
      fill="none"
      stroke="#333333"
      stroke-width="1"
    />
  </g>
  <g
    class="highcharts-axis highcharts-yaxis"
    data-z-index="2"
  >
    <text
      class="highcharts-axis-title"
      data-z-index="7"
      style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
      text-anchor="middle"
      transform="translate(0,0) rotate(270 NaN NaN)"
      x="NaN"
      y="NaN"
    >
      人口数
    </text>
    <path
      class="highcharts-axis-line"
      d="M 0 0"
      data-z-index="7"
      fill="none"
      stroke="#333333"
      stroke-width="0"
    />
  </g>
  <g
    class="highcharts-series-group"
    data-z-index="3"
    filter="none"
  >
    <g
      class="highcharts-series highcharts-series-0 highcharts-line-series"
      clip-path="url(#highcharts-104-)"
      data-z-index="0.1"
      opacity="1"
      transform="translate(NaN,10) scale(1 1)"
    />
    <g
      class="highcharts-markers highcharts-series-0 highcharts-line-series"
      clip-path="url(#highcharts-105-)"
      data-z-index="0.1"
      opacity="1"
      transform="translate(NaN,10) scale(1 1)"
    />
  </g>
  <text
    class="highcharts-subtitle"
    data-z-index="4"
    style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
    text-anchor="middle"
    x="300"
    y="10"
  />
  <text
    class="highcharts-caption"
    data-z-index="4"
    style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
    text-anchor="start"
    x="10"
    y="387"
  />
  <text
    class="highcharts-title"
    data-z-index="4"
    style="font-size: 1.2em; color: rgb(51, 51, 51); font-weight: bold; fill: #333333;"
    text-anchor="start"
    x="10"
    y="10"
  >
    年次(横軸)と各都道府県の老年人口(縦軸)の関係
  </text>
  <g
    class="highcharts-legend highcharts-no-tooltip"
    data-z-index="7"
    transform="translate(590,189)"
  >
    <rect
      class="highcharts-legend-box"
      fill="none"
      filter="none"
      rx="0"
      ry="0"
      stroke="#999999"
      stroke-width="0"
    />
    <g
      data-z-index="1"
    >
      <g>
        <g
          class="highcharts-legend-item highcharts-line-series highcharts-color-undefined highcharts-series-0"
          data-z-index="1"
          transform="translate(8,3)"
        >
          <path
            class="highcharts-graph"
            d="M 0 5 L 16 5"
            fill="none"
            stroke="#03af7a"
            stroke-dasharray="16,6"
            stroke-width="2"
          />
          <path
            class="highcharts-point"
            d="M 8 5 L 8 5 L 8 5 L 8 5 Z"
            fill="#03af7a"
            opacity="1"
            stroke="#ffffff"
            stroke-width="0"
          />
          <text
            data-z-index="2"
            style="color: rgb(51, 51, 51); cursor: pointer; font-size: 0.8em; text-decoration: none; fill: #333333;"
            text-anchor="start"
            x="21"
            y="5"
          >
            北海道
          </text>
        </g>
      </g>
    </g>
  </g>
  <g
    class="highcharts-axis-labels highcharts-xaxis-labels"
    data-z-index="7"
  />
  <g
    class="highcharts-axis-labels highcharts-yaxis-labels"
    data-z-index="7"
  />
  <text
    class="highcharts-credits"
    data-z-index="8"
    style="cursor: pointer; color: rgb(153, 153, 153); font-size: 0.6em; fill: #999999;"
    text-anchor="end"
    x="590"
    y="395"
  >
    Highcharts.com
  </text>
</svg>
`;

exports[`PrefPopulationLineChart Snapshot: データが空の場合 1`] = `
<div>
  <section
    class="chart"
  >
    <select
      class="select-filter-option"
      id=":r0:"
    >
      <option
        value="総人口"
      >
        総人口
      </option>
      <option
        value="年少人口"
      >
        年少人口
      </option>
      <option
        value="生産年齢人口"
      >
        生産年齢人口
      </option>
      <option
        value="老年人口"
      >
        老年人口
      </option>
    </select>
    <div
      data-highcharts-chart="0"
      style="overflow: hidden; pointer-events: auto;"
    >
      <div
        class="highcharts-container "
        dir="ltr"
        id="highcharts-0"
        style="position: relative; overflow: hidden; width: 600px; height: 400px; text-align: left; line-height: normal; z-index: 0; user-select: none; outline: none;"
      >
        <svg
          aria-label="年次(横軸)と各都道府県の総人口(縦軸)の関係"
          class="highcharts-root"
          height="400"
          role="img"
          style="font-family: Helvetica, Arial, sans-serif; font-size: 1rem;"
          version="1.1"
          viewBox="0 0 600 400"
          width="600"
          xmlns="http://www.w3.org/2000/svg"
        >
          <desc>
            Created with Highcharts 11.4.6
          </desc>
          <defs>
            <filter
              id="highcharts-drop-shadow-0"
            >
              <fedropshadow
                dx="1"
                dy="1"
                flood-color="#000000"
                flood-opacity="0.75"
                stdDeviation="2.5"
              />
            </filter>
          </defs>
          <rect
            class="highcharts-background"
            fill="#ffffff"
            filter="none"
            height="400"
            rx="0"
            ry="0"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="highcharts-plot-background"
            fill="none"
            filter="none"
            height="375"
            width="580"
            x="10"
            y="10"
          />
          <rect
            class="highcharts-plot-border"
            data-z-index="1"
            fill="none"
            height="375"
            stroke="#cccccc"
            stroke-width="0"
            width="580"
            x="10"
            y="10"
          />
          <g
            class="highcharts-series-group"
            data-z-index="3"
            filter="none"
          />
          <text
            class="highcharts-title"
            data-z-index="4"
            style="font-size: 1.2em; color: rgb(51, 51, 51); font-weight: bold; fill: #333333;"
            text-anchor="start"
            x="10"
            y="10"
          >
            年次(横軸)と各都道府県の総人口(縦軸)の関係
          </text>
          <text
            class="highcharts-subtitle"
            data-z-index="4"
            style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
            text-anchor="middle"
            x="300"
            y="10"
          />
          <text
            class="highcharts-caption"
            data-z-index="4"
            style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
            text-anchor="start"
            x="10"
            y="387"
          />
          <g
            class="highcharts-legend highcharts-no-tooltip"
            data-z-index="7"
            visibility="hidden"
          >
            <rect
              class="highcharts-legend-box"
              fill="none"
              filter="none"
              height="8"
              rx="0"
              ry="0"
              stroke="#999999"
              stroke-width="0"
              width="8"
              x="0"
              y="0"
            />
            <g
              data-z-index="1"
            >
              <g />
            </g>
          </g>
          <text
            class="highcharts-credits"
            data-z-index="8"
            style="cursor: pointer; color: rgb(153, 153, 153); font-size: 0.6em; fill: #999999;"
            text-anchor="end"
            x="590"
            y="395"
          >
            Highcharts.com
          </text>
        </svg>
      </div>
    </div>
  </section>
</div>
`;

exports[`PrefPopulationLineChart Snapshot: 北海道のみの場合 1`] = `
<div>
  <section
    class="chart"
  >
    <select
      class="select-filter-option"
      id=":r1:"
    >
      <option
        value="総人口"
      >
        総人口
      </option>
      <option
        value="年少人口"
      >
        年少人口
      </option>
      <option
        value="生産年齢人口"
      >
        生産年齢人口
      </option>
      <option
        value="老年人口"
      >
        老年人口
      </option>
    </select>
    <div
      data-highcharts-chart="1"
      style="overflow: hidden; pointer-events: auto;"
    >
      <div
        class="highcharts-container "
        dir="ltr"
        id="highcharts-2"
        style="position: relative; overflow: hidden; width: 600px; height: 400px; text-align: left; line-height: normal; z-index: 0; user-select: none; outline: none;"
      >
        <svg
          aria-label="年次(横軸)と各都道府県の総人口(縦軸)の関係"
          class="highcharts-root"
          height="400"
          role="img"
          style="font-family: Helvetica, Arial, sans-serif; font-size: 1rem;"
          version="1.1"
          viewBox="0 0 600 400"
          width="600"
          xmlns="http://www.w3.org/2000/svg"
        >
          <desc>
            Created with Highcharts 11.4.6
          </desc>
          <defs>
            <filter
              id="highcharts-drop-shadow-1"
            >
              <fedropshadow
                dx="1"
                dy="1"
                flood-color="#000000"
                flood-opacity="0.75"
                stdDeviation="2.5"
              />
            </filter>
            <clippath
              id="highcharts-16-"
            >
              <rect
                fill="none"
                height="NaN"
                width="NaN"
                x="0"
                y="0"
              />
            </clippath>
            <clippath
              id="highcharts-17-"
            >
              <rect
                class="highcharts-animating"
                fill="none"
                height="NaNNaN"
                width="NaN"
                x="0"
                y="0"
              />
            </clippath>
            <clippath
              id="highcharts-18-"
            >
              <rect
                fill="none"
                height="NaN"
                width="99"
                x="-99"
                y="-99"
              />
            </clippath>
          </defs>
          <rect
            class="highcharts-background"
            fill="#ffffff"
            filter="none"
            height="400"
            rx="0"
            ry="0"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="highcharts-plot-background"
            fill="none"
            filter="none"
            height="NaN"
            width="NaN"
            x="NaN"
            y="10"
          />
          <g
            class="highcharts-grid highcharts-xaxis-grid"
            data-z-index="1"
          />
          <g
            class="highcharts-grid highcharts-yaxis-grid"
            data-z-index="1"
          />
          <rect
            class="highcharts-plot-border"
            data-z-index="1"
            fill="none"
            height="0"
            stroke="#cccccc"
            stroke-width="0"
            width="0"
            x="0"
            y="10"
          />
          <g
            class="highcharts-axis highcharts-xaxis"
            data-z-index="2"
          >
            <text
              class="highcharts-axis-title"
              data-z-index="7"
              style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
              text-anchor="middle"
              transform="translate(0,0)"
              x="NaN"
              y="NaN"
            >
              年次
            </text>
            <path
              class="highcharts-axis-line"
              d="M 0 0"
              data-z-index="7"
              fill="none"
              stroke="#333333"
              stroke-width="1"
            />
          </g>
          <g
            class="highcharts-axis highcharts-yaxis"
            data-z-index="2"
          >
            <text
              class="highcharts-axis-title"
              data-z-index="7"
              style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
              text-anchor="middle"
              transform="translate(0,0) rotate(270 NaN NaN)"
              x="NaN"
              y="NaN"
            >
              人口数
            </text>
            <path
              class="highcharts-axis-line"
              d="M 0 0"
              data-z-index="7"
              fill="none"
              stroke="#333333"
              stroke-width="0"
            />
          </g>
          <g
            class="highcharts-series-group"
            data-z-index="3"
            filter="none"
          >
            <g
              class="highcharts-series highcharts-series-0 highcharts-line-series"
              clip-path="url(#highcharts-17-)"
              data-z-index="0.1"
              opacity="1"
              transform="translate(NaN,10) scale(1 1)"
            />
            <g
              class="highcharts-markers highcharts-series-0 highcharts-line-series"
              clip-path="url(#highcharts-18-)"
              data-z-index="0.1"
              opacity="1"
              transform="translate(NaN,10) scale(1 1)"
            />
          </g>
          <text
            class="highcharts-title"
            data-z-index="4"
            style="font-size: 1.2em; color: rgb(51, 51, 51); font-weight: bold; fill: #333333;"
            text-anchor="start"
            x="10"
            y="10"
          >
            年次(横軸)と各都道府県の総人口(縦軸)の関係
          </text>
          <text
            class="highcharts-subtitle"
            data-z-index="4"
            style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
            text-anchor="middle"
            x="300"
            y="10"
          />
          <text
            class="highcharts-caption"
            data-z-index="4"
            style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
            text-anchor="start"
            x="10"
            y="387"
          />
          <g
            class="highcharts-legend highcharts-no-tooltip"
            data-z-index="7"
            transform="translate(590,189)"
          >
            <rect
              class="highcharts-legend-box"
              fill="none"
              filter="none"
              rx="0"
              ry="0"
              stroke="#999999"
              stroke-width="0"
            />
            <g
              data-z-index="1"
            >
              <g>
                <g
                  class="highcharts-legend-item highcharts-line-series highcharts-color-undefined highcharts-series-0"
                  data-z-index="1"
                  transform="translate(8,3)"
                >
                  <path
                    class="highcharts-graph"
                    d="M 0 5 L 16 5"
                    fill="none"
                    stroke="#03af7a"
                    stroke-dasharray="16,6"
                    stroke-width="2"
                  />
                  <path
                    class="highcharts-point"
                    d="M 8 5 L 8 5 L 8 5 L 8 5 Z"
                    fill="#03af7a"
                    opacity="1"
                    stroke="#ffffff"
                    stroke-width="0"
                  />
                  <text
                    data-z-index="2"
                    style="color: rgb(51, 51, 51); cursor: pointer; font-size: 0.8em; text-decoration: none; fill: #333333;"
                    text-anchor="start"
                    x="21"
                    y="5"
                  >
                    北海道
                  </text>
                </g>
              </g>
            </g>
          </g>
          <g
            class="highcharts-axis-labels highcharts-xaxis-labels"
            data-z-index="7"
          >
            <text
              style="color: rgb(51, 51, 51); cursor: default; font-size: 0.8em; fill: #333333;"
              x="0"
            >
              x
            </text>
          </g>
          <g
            class="highcharts-axis-labels highcharts-yaxis-labels"
            data-z-index="7"
          />
          <text
            class="highcharts-credits"
            data-z-index="8"
            style="cursor: pointer; color: rgb(153, 153, 153); font-size: 0.6em; fill: #999999;"
            text-anchor="end"
            x="590"
            y="395"
          >
            Highcharts.com
          </text>
        </svg>
      </div>
    </div>
  </section>
</div>
`;

exports[`PrefPopulationLineChart Snapshot: 北海道＋青森県の場合 1`] = `
<div>
  <section
    class="chart"
  >
    <select
      class="select-filter-option"
      id=":r2:"
    >
      <option
        value="総人口"
      >
        総人口
      </option>
      <option
        value="年少人口"
      >
        年少人口
      </option>
      <option
        value="生産年齢人口"
      >
        生産年齢人口
      </option>
      <option
        value="老年人口"
      >
        老年人口
      </option>
    </select>
    <div
      data-highcharts-chart="2"
      style="overflow: hidden; pointer-events: auto;"
    >
      <div
        class="highcharts-container "
        dir="ltr"
        id="highcharts-20"
        style="position: relative; overflow: hidden; width: 600px; height: 400px; text-align: left; line-height: normal; z-index: 0; user-select: none; outline: none;"
      >
        <svg
          aria-label="年次(横軸)と各都道府県の総人口(縦軸)の関係"
          class="highcharts-root"
          height="400"
          role="img"
          style="font-family: Helvetica, Arial, sans-serif; font-size: 1rem;"
          version="1.1"
          viewBox="0 0 600 400"
          width="600"
          xmlns="http://www.w3.org/2000/svg"
        >
          <desc>
            Created with Highcharts 11.4.6
          </desc>
          <defs>
            <filter
              id="highcharts-drop-shadow-2"
            >
              <fedropshadow
                dx="1"
                dy="1"
                flood-color="#000000"
                flood-opacity="0.75"
                stdDeviation="2.5"
              />
            </filter>
            <clippath
              id="highcharts-34-"
            >
              <rect
                fill="none"
                height="NaNNaN"
                width="NaNNaN"
                x="0"
                y="0"
              />
            </clippath>
            <clippath
              id="highcharts-35-"
            >
              <rect
                class="highcharts-animating"
                fill="none"
                height="NaN"
                width="NaN"
                x="0"
                y="0"
              />
            </clippath>
            <clippath
              id="highcharts-36-"
            >
              <rect
                fill="none"
                height="NaN"
                width="NaN"
                x="-99"
                y="-99"
              />
            </clippath>
          </defs>
          <rect
            class="highcharts-background"
            fill="#ffffff"
            filter="none"
            height="400"
            rx="0"
            ry="0"
            width="600"
            x="0"
            y="0"
          />
          <rect
            class="highcharts-plot-background"
            fill="none"
            filter="none"
            height="NaN"
            width="NaN"
            x="NaN"
            y="10"
          />
          <g
            class="highcharts-grid highcharts-xaxis-grid"
            data-z-index="1"
          />
          <g
            class="highcharts-grid highcharts-yaxis-grid"
            data-z-index="1"
          />
          <rect
            class="highcharts-plot-border"
            data-z-index="1"
            fill="none"
            height="0"
            stroke="#cccccc"
            stroke-width="0"
            width="0"
            x="0"
            y="10"
          />
          <g
            class="highcharts-axis highcharts-xaxis"
            data-z-index="2"
          >
            <text
              class="highcharts-axis-title"
              data-z-index="7"
              style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
              text-anchor="middle"
              transform="translate(0,0)"
              x="NaN"
              y="NaN"
            >
              年次
            </text>
            <path
              class="highcharts-axis-line"
              d="M 0 0"
              data-z-index="7"
              fill="none"
              stroke="#333333"
              stroke-width="1"
            />
          </g>
          <g
            class="highcharts-axis highcharts-yaxis"
            data-z-index="2"
          >
            <text
              class="highcharts-axis-title"
              data-z-index="7"
              style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
              text-anchor="middle"
              transform="translate(0,0) rotate(270 NaN NaN)"
              x="NaN"
              y="NaN"
            >
              人口数
            </text>
            <path
              class="highcharts-axis-line"
              d="M 0 0"
              data-z-index="7"
              fill="none"
              stroke="#333333"
              stroke-width="0"
            />
          </g>
          <g
            class="highcharts-series-group"
            data-z-index="3"
            filter="none"
          >
            <g
              class="highcharts-series highcharts-series-0 highcharts-line-series"
              clip-path="url(#highcharts-35-)"
              data-z-index="0.1"
              opacity="1"
              transform="translate(NaN,10) scale(1 1)"
            />
            <g
              class="highcharts-markers highcharts-series-0 highcharts-line-series"
              clip-path="url(#highcharts-36-)"
              data-z-index="0.1"
              opacity="1"
              transform="translate(NaN,10) scale(1 1)"
            />
            <g
              class="highcharts-series highcharts-series-1 highcharts-line-series"
              clip-path="url(#highcharts-35-)"
              data-z-index="0.1"
              opacity="1"
              transform="translate(NaN,10) scale(1 1)"
            />
            <g
              class="highcharts-markers highcharts-series-1 highcharts-line-series"
              clip-path="url(#highcharts-36-)"
              data-z-index="0.1"
              opacity="1"
              transform="translate(NaN,10) scale(1 1)"
            />
          </g>
          <text
            class="highcharts-title"
            data-z-index="4"
            style="font-size: 1.2em; color: rgb(51, 51, 51); font-weight: bold; fill: #333333;"
            text-anchor="start"
            x="10"
            y="10"
          >
            年次(横軸)と各都道府県の総人口(縦軸)の関係
          </text>
          <text
            class="highcharts-subtitle"
            data-z-index="4"
            style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
            text-anchor="middle"
            x="300"
            y="10"
          />
          <text
            class="highcharts-caption"
            data-z-index="4"
            style="color: rgb(102, 102, 102); font-size: 0.8em; fill: #666666;"
            text-anchor="start"
            x="10"
            y="387"
          />
          <g
            class="highcharts-legend highcharts-no-tooltip"
            data-z-index="7"
            transform="translate(590,185)"
          >
            <rect
              class="highcharts-legend-box"
              fill="none"
              filter="none"
              rx="0"
              ry="0"
              stroke="#999999"
              stroke-width="0"
            />
            <g
              data-z-index="1"
            >
              <g>
                <g
                  class="highcharts-legend-item highcharts-line-series highcharts-color-undefined highcharts-series-0"
                  data-z-index="1"
                  transform="translate(8,3)"
                >
                  <path
                    class="highcharts-graph"
                    d="M 0 5 L 16 5"
                    fill="none"
                    stroke="#03af7a"
                    stroke-dasharray="16,6"
                    stroke-width="2"
                  />
                  <path
                    class="highcharts-point"
                    d="M 8 5 L 8 5 L 8 5 L 8 5 Z"
                    fill="#03af7a"
                    opacity="1"
                    stroke="#ffffff"
                    stroke-width="0"
                  />
                  <text
                    data-z-index="2"
                    style="color: rgb(51, 51, 51); cursor: pointer; font-size: 0.8em; text-decoration: none; fill: #333333;"
                    text-anchor="start"
                    x="21"
                    y="5"
                  >
                    北海道
                  </text>
                </g>
                <g
                  class="highcharts-legend-item highcharts-line-series highcharts-color-undefined highcharts-series-1"
                  data-z-index="1"
                  transform="translate(8,10)"
                >
                  <path
                    class="highcharts-graph"
                    d="M 0 5 L 16 5"
                    fill="none"
                    stroke="#005aff"
                    stroke-dasharray="2,2"
                    stroke-width="2"
                  />
                  <path
                    class="highcharts-point"
                    d="M 8 5 L 8 5 L 8 5 L 8 5 Z"
                    fill="#005aff"
                    opacity="1"
                    stroke="#ffffff"
                    stroke-width="0"
                  />
                  <text
                    data-z-index="2"
                    style="color: rgb(51, 51, 51); cursor: pointer; font-size: 0.8em; text-decoration: none; fill: #333333;"
                    text-anchor="start"
                    x="21"
                    y="5"
                  >
                    青森県
                  </text>
                </g>
              </g>
            </g>
          </g>
          <g
            class="highcharts-axis-labels highcharts-xaxis-labels"
            data-z-index="7"
          >
            <text
              style="color: rgb(51, 51, 51); cursor: default; font-size: 0.8em; fill: #333333;"
              x="0"
            >
              x
            </text>
          </g>
          <g
            class="highcharts-axis-labels highcharts-yaxis-labels"
            data-z-index="7"
          />
          <text
            class="highcharts-credits"
            data-z-index="8"
            style="cursor: pointer; color: rgb(153, 153, 153); font-size: 0.6em; fill: #999999;"
            text-anchor="end"
            x="590"
            y="395"
          >
            Highcharts.com
          </text>
        </svg>
      </div>
    </div>
  </section>
</div>
`;
